[package]
name = "carr_madan"
version = "0.3.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/carr_madan_rust"
repository = "https://github.com/phillyfan1138/carr_madan_rust"
readme = "README.md"
license = "MIT"
description = "A library implementing Carr and Madan's algorithm for option pricing."
edition = "2018"

[dependencies]
rustfft = "2.0.0"
num = "0.2"
rayon = "1.0.1"

[dev-dependencies]
approx = "0.2.0"
black_scholes = "0.1.2"


[badges]
travis-ci = { repository = "phillyfan1138/carr_madan_rust" }
